--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <script src="scripts/p5.js"></script>
   <script src="scripts/main.js"></script>
 
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  
+ 
+<div class="image" >
+  <img src="" alt="" id="image">
+  <div class="text" id="text"></div> 
+
+</div>  
+
 </body>
 </html>
