updated the css and animation

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>test</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no " />
   <script src="scripts/p5.js"></script>
   <script src="scripts/main.js"></script>
-
   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
  
-<div class="image" >
+<!-- <div class="image" >
   <img src="" alt="" id="image">
-  <div class="text" id="text"></div> 
+  <div class="text" id="text"></div>  -->
 
-</div>  
+     <div class="images" >
+       <img src="" alt="" class="image distribute" id="image">
+       <div class="description" id="discription" style="display:none"></div>
+     </div> 
+
+<!-- </div>   -->
 
 </body>
 </html>
